--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     , "jade": "*"
     , "coffee-script": "1.x.x"
     , "stitch": "*"
+    , "fbgraph": "*"
   }, 
     "devDependencies": {
       "vows": "*"
