--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "express-coffee-sandbox"
+    "name": "facebook-sandbox"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
